Made base layout

--- a/style.css
+++ b/style.css
@@ -1,38 +1,108 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Rubik&display=swap");
 
-* {
+body {
   margin: 0;
   padding: 0;
+  overflow: hidden;
+}
+
+input {
+  border-radius: 5px;
+  border: 1px solid #e5e7eb;
+  width: 250px;
+  height: 25px;
+}
+input,
+label {
+  display: block;
+}
+input:focus {
+  border: 1px solid blue;
+  outline: none;
+}
+
+.main-form label,
+.main-form input {
+  margin: 10px 0;
 }
 
 .main-container {
   display: flex;
-  font-family: "Roboto", sans-serif;
+  font-family: "Rubik", sans-serif;
 }
 
 .left-container {
   width: 35vw;
   height: 100vh;
-  background: url("leaves.jpg");
+  background: url("images/leaves.jpg");
   background-size: cover;
-  flex-shrink: 0;
 }
 
 .right-container {
   width: 65vw;
-  background-color: rgb(236, 235, 235);
-  position: relative;
+  background-color: rgb(207, 233, 208);
+  display: flex;
+  flex-direction: column;
+  color: #12440a;
 }
 
 .right-header {
-  min-height: 40vh;
-  width: 60%;
+  padding-top: 10px;
+  padding-left: 150px;
+  min-height: 30vh;
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  flex-direction: column;
+  font-size: 1rem;
 }
 
 .right-sign-up {
+  padding-top: 50px;
+  padding-left: 50px;
   min-height: 30vh;
+  background-color: #94ce94;
+  padding-bottom: 15px;
+  color: #12440a;
 }
 
 .right-footer {
+  padding-left: 50px;
+  padding-top: 50px;
   min-height: 30vh;
+}
+.right-footer > p {
+  padding-top: 15px;
+}
+
+.main-form {
+  width: 70%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.main-form > div {
+  width: 40%;
+  min-width: 150px;
+  margin-bottom: 20px;
+  margin-right: 20px;
+}
+
+button {
+  background-color: #44c767;
+  border-radius: 28px;
+  border: 1px solid #18ab29;
+  display: inline-block;
+  cursor: pointer;
+  color: #ffffff;
+  font-family: Arial;
+  font-size: 15px;
+  padding: 16px 31px;
+  text-decoration: none;
+  text-shadow: 0px 1px 0px #2f6627;
+}
+button:hover {
+  background: linear-gradient(to bottom, #5cbf2a 5%, #44c767 100%);
+  background-color: #5cbf2a;
 }
